add tag functionality

--- a/src/posts/2025-02-03-post2.md
+++ b/src/posts/2025-02-03-post2.md
@@ -1,4 +1,4 @@
 ---
-tags: tag1, tag2, tag3
+tags: tag1, tag2, tag3, tag with spaces and cAsES, punct.**uat&&io?!!n
 ---
 hi i am a post with title datestamp and front matter
