cleanup build, rerender post index, add fonts

--- a/src/posts/2025-02-03-post2.md
+++ b/src/posts/2025-02-03-post2.md
@@ -1,4 +1,8 @@
 ---
 tags: tag1, tag2, tag3, tag with spaces and cAsES, punct.**uat&&io?!!n
+title: Post With Date
 ---
-hi i am a post with title datestamp and front matter
+
+Hi! I am a post with title datestamp and front matter.
+
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus nec dui a nisi blandit condimentum. Nulla vestibulum enim ac diam porttitor, sed pharetra sapien ornare. Nulla convallis risus at quam vestibulum porta. Suspendisse vehicula, dolor non facilisis euismod, lacus metus consequat risus, sit amet cursus lectus justo non elit. Pellentesque hendrerit mi ac venenatis consequat. Aenean fringilla nunc in erat rhoncus, non aliquet libero scelerisque. Duis ornare eros vel purus lacinia lacinia. Phasellus aliquam felis elit, in auctor sem vehicula id. Vestibulum at tempus nisl, nec dictum lorem. Ut vitae venenatis enim. Aenean vehicula, neque eget congue dictum, odio nibh consectetur magna, vel eleifend sapien risus sed sem.
