rename datetime_format filter to strftime, add exposition to example posts

--- a/src/posts/2025-02-04-post2.md
+++ b/src/posts/2025-02-04-post2.md
@@ -1,8 +1,22 @@
 ---
 tags: tag1, tag2, tag3, tag with spaces and cAsES, punct.**uat&&io?!!n
-title: Post With Date
+title: Post with date and lots of tags.
 ---
 
-Hi! I am a post with title datestamp and front matter.
+## Date
+To annotate a markdown post with a date, prefix the filename with `YYYY-MM-DD`, for example `2025-02-04-post2.md`.
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus nec dui a nisi blandit condimentum. Nulla vestibulum enim ac diam porttitor, sed pharetra sapien ornare. Nulla convallis risus at quam vestibulum porta. Suspendisse vehicula, dolor non facilisis euismod, lacus metus consequat risus, sit amet cursus lectus justo non elit. Pellentesque hendrerit mi ac venenatis consequat. Aenean fringilla nunc in erat rhoncus, non aliquet libero scelerisque. Duis ornare eros vel purus lacinia lacinia. Phasellus aliquam felis elit, in auctor sem vehicula id. Vestibulum at tempus nisl, nec dictum lorem. Ut vitae venenatis enim. Aenean vehicula, neque eget congue dictum, odio nibh consectetur magna, vel eleifend sapien risus sed sem.
+I've added a custom [Jinja filter](https://jinja.palletsprojects.com/en/stable/templates/#filters) `strftime` to render `datetime` objects in templates. 
+
+By default, it will render to `%Y %B %d`.
+```
+{{ date | strftime }}
+```
+
+You can also pass in custom formats using standard [Python `strftime` notation](https://strftime.org/).
+```
+{{ date | strftime("%Y-%m-%d %H:%M:%S") }}
+```
+
+## Tags
+Tags are automatically lowercased. Punctuation and whitespace will automatically be parsed out of tags and replaced with hyphens. For example, `tag with spaces and cAsES` has been cleaned to `tag-with-spaces-and-cases`, and `punct.**uat&&io?!!n` has been cleaned to `punct-uat-io-n`.
