add nl2br (newline to break) markdown extension and cleanup posts

--- a/src/posts/2025-02-04-post2.md
+++ b/src/posts/2025-02-04-post2.md
@@ -19,4 +19,8 @@ You can also pass in custom formats using standard [Python `strftime` notation](
 ```
 
 ## Tags
-Tags are automatically lowercased. Punctuation and whitespace will automatically be parsed out of tags and replaced with hyphens. For example, `tag with spaces and cAsES` has been cleaned to `tag-with-spaces-and-cases`, and `punct.**uat&&io?!!n` has been cleaned to `punct-uat-io-n`.
+Tags are automatically lowercased. Punctuation and whitespace will automatically be parsed out of tags and replaced with hyphens. For example:
+
+- `tag with spaces` becomes `tag-with-spaces`
+- `cAsEs` becomes `cases`
+- `punct.**uat&&io?!!n` becomes `punct-uat-io-n`
