fix image relative url

--- a/src/posts/2025-02-18-image.md
+++ b/src/posts/2025-02-18-image.md
@@ -6,4 +6,4 @@ date: 2025-02-18 01:56:51
 
 Including an image in Markdown: `![alt text](url)`
 
-![yak intensifies](/public/images/yak-intensifies.gif)
+![yak intensifies](../public/images/yak-intensifies.gif)
